# Chess

./: .gitignore
C++/ChessEngine/: CMakeLists.txt  CMakeLists_Linux.txt  CMakeLists_Windows.txt  ChessEngineAllPossibleMovesGenerator.cpp  ChessEngineAllPossibleMovesGenerator.h  ChessEngineBestMoveFinder.cpp  ChessEngineBestMoveFinder.h  ChessEngineChessMoveBasicOperations.cpp  ChessEngineChessMoveBasicOperations.h  ChessEngineChessboardPrinter.cpp  ChessEngineChessboardPrinter.h  ChessEngineConfigurationFileReaderWriter.cpp  ChessEngineConfigurationFileReaderWriter.h  ChessEngineConstants.h  ChessEngineDataInitializer.cpp  ChessEngineDataInitializer.h  ChessEngineMain.cpp  ChessEngineMainThreadsManager.cpp  ChessEngineMainThreadsManager.h  ChessEngineResultsStatistics.cpp  ChessEngineResultsStatistics.h  ChessEngineThreadsStartData.h  ChessEngineTypes.h
C++/ChessEngine/MPIbuild/: ChessBoard11.txt  ChessBoard12.txt  ChessBoard13.txt  ChessBoard15.txt  ChessBoard16.txt  ChessBoard17.txt  ChessBoard18.txt  ChessBoard20.txt  ChessBoard21.txt  ChessBoard22.txt  ChessBoard4.txt  ChessEngineProjectConfig.xml  ChessEngineProjectConfig1.xml  ChessEngineProjectConfig2.xml  ChessEngineProjectConfig3.xml  MPITest1SBATCH1.sh  Makefile
C++/ChessEngine/workdir/: actual_tournament_start_datetime.txt  chosen_moves_paths.txt  last_actual_chessboard_state.txt  last_actual_move.txt
C++/Common/DateTimeUtils/: DateTimeUtils.cpp  DateTimeUtils.h
C++/Common/FileUtils/: FileUtils.cpp  FileUtils.h
C++/Common/Include/: ExceptionsMacro.h
C++/Common/Logger/: Logger.cpp  Logger.h
C++/Common/MultiLockGuard/: ChessMultiLockGuard.h
C++/Common/Platform/: DestinationPlatform.h
CUDA/ChessEngineCUDA/: CMakeLists.txt  ChessEngineAllPossibleMovesGeneratorKernelCUDA.h  ChessEngineAllPossibleMovesGeneratorKernelManagerCUDA.h  ChessEngineBestMoveFinder.h  ChessEngineChessboardFileReader.h  ChessEngineChessboardPrinter.h  ChessEngineMain.cu  ChessEngineMainThreadsManager.cu  ChessEngineThreadsData.h
CUDA/ChessEngineCUDA/workdir/: all_games_all_moves_history.txt
CUDA/ChessSolutionCUDA/: ChessSolutionCUDA.sln
CUDA/ChessSolutionCUDA/ChessEngineProjectCUDA/: CMakeLists.txt  ChessEngineAllPossibleMovesGenerator.cu  ChessEngineAllPossibleMovesGenerator.h  ChessEngineAllPossibleMovesGeneratorKernelManagerCUDA.cu  ChessEngineBestMoveFinder.cu  ChessEngineChessMoveBasicOperations.cu  ChessEngineChessMoveBasicOperations.h  ChessEngineChessboardFileReader.cu  ChessEngineChessboardPrinter.cu  ChessEngineChessboardPrinter.h  ChessEngineConfigurationFileReaderWriter.cu  ChessEngineConfigurationFileReaderWriter.h  ChessEngineConstants.h  ChessEngineDataInitializer.cu  ChessEngineDataInitializer.h  ChessEngineMainThreadsManager.h  ChessEngineProjectCUDA.vcxproj  ChessEngineResultsStatistics.cu  ChessEngineResultsStatistics.h  ChessEngineThreadsData.cu  ChessEngineTypes.h  ChessEngineTypesCUDA.h
CUDA/ChessSolutionCUDA/ChessEngineProjectCUDA/workdir/: actual_game_start_datetime.txt  chosen_moves_paths.txt  last_engine_move.txt
CUDA/Common/DateTimeUtils/: DateTimeUtils.cpp  DateTimeUtils.h
CUDA/Common/FileUtils/: FileUtils.cu  FileUtils.h
CUDA/Common/HandleError/: HandleErrorCUDA.cu  HandleErrorCUDA.h
CUDA/Common/Lock/: LockCUDA.h
CUDA/Common/Logger/: Logger.cpp  Logger.h
CUDA/Common/StringUtils/: StringUtils.cpp  StringUtils.h
Python/ChessInterface/: ChessInterfaceColors.py  ChessInterfaceConfig_Linux.xml  ChessInterfaceConfig_Windows.xml  ChessInterfaceConstants.py  ChessInterfaceEngine.py  ChessInterfaceFigure.py  ChessInterfaceFiles.py  ChessInterfaceFrame.py  ChessInterfaceMain.py  ChessInterfaceNetwork.py  ChessInterfaceTournament.py
Python/ChessInterface/engines/client/engine/: ChessEngineProjectConfigCUDA_Linux.txt  ChessEngineProjectConfigCUDA_Windows.txt  ChessEngineProjectConfig_Linux.xml  ChessEngineProjectConfig_Windows.xml
Python/ChessInterface/engines/client/workdir/: actual_game_start_datetime.txt  actual_tournament_start_datetime.txt  all_games_all_moves_history.txt  last_engine_move.txt
Python/ChessInterface/engines/server/engine/: ChessEngineProjectConfigCUDA_Linux.txt  ChessEngineProjectConfigCUDA_Windows.txt  ChessEngineProjectConfig_Linux.xml  ChessEngineProjectConfig_Windows.xml
Python/ChessInterface/engines/server/workdir/: actual_game_start_datetime.txt  actual_tournament_start_datetime.txt  all_games_all_moves_history.txt  chosen_moves_paths.txt  chosen_moves_paths_type.txt  last_actual_chessboard_state.txt  last_actual_move.txt  last_engine_move.txt
